--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -7,7 +7,7 @@
 
   <p>
     <%= m.label 'Due date:' %><br>
-    <%= m.text_area :due_date %>
+    <%= m.text_field :due_date %>
   </p>
 
   <p>
@@ -24,12 +24,10 @@
     <%= m.text_area :icon %>
   </p>
   <p>
-    <%= m.label 'Created at:' %><br>
-    <%= m.text_area :created_at %>
-  </p>
-  <p>
-    <%= m.label 'Updated at:' %><br>
-    <%= m.text_area :updated_at %>
+
+    <%= m.hidden_field(:created_at, :value=>Time.now) %>
+
+    <%= m.hidden_field(:updated_at, :value=>Time.now) %>
   </p>
   <!-- <p>
     <%= m.label 'Category:' %><br>
@@ -37,7 +35,22 @@
   </p> -->
 
   <p>
-    <%= m.submit 'Create'%>
+    <%= m.button 'Create Milestone', :type=>'button', :onclick=>'if(validate()){submit();};' %>
   </p>
 
+
 <% end %>
+
+<script>
+  function validate(){
+    var title, description;
+    // Get the value of the input field with id="name"
+    title = document.getElementById('milestone_title').value;
+    // Get the value of the input field with id="mail"
+    description = document.getElementById("milestone_description").value;
+
+    // Validate
+    return ((title!='') && (description!=''))
+  }
+
+</script>
