--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -39,3 +39,25 @@
     </div>
   </div>
 </div>
+
+
+<h2><%= 'Assign:' %></h2>
+<% count=0 %>
+<%= form_tag ({:action => 'assign_milestone', :controller => 'people', :person_id => current_user.id}) do   %>
+  <select name="milestone_id">
+    <% Milestone.all.each do |m| %>
+      <% if @overcomes.exists?(m.id) %> #no hago nada
+      <% else %>
+        <option value= <%=m.id%> > <%=m.title%></option>
+        <%= count=count+1%>
+      <% end %>
+    <% end %>
+  </select>
+
+  <% if count>0 %>
+    <%= submit_tag('Assign') %>
+  <% else %>
+    There are not available milestones
+  <% end %>
+<% end %>
+
