--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -30,4 +30,5 @@ $(function() {
       modules: 'html5, date',
       lang: '<%= I18n.locale %>'
   });
+  $.fn.datepicker.defaults.format = "dd/mm/yyyy";
 });
