--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,32 +1,32 @@
 <p>
-  <strong><%= 'Note' %>:</strong>
+  <strong><%= t('note') %>:</strong>
   <%= note.text %>
 </p>
 
 <p>
-  <strong><%= 'Author' %>:</strong>
+  <strong><%= t('note_author') %>:</strong>
   <%= Person.find(note.author_id).name %>
 </p>
 
 <p>
-  <strong><%= 'Created_at' %>:</strong>
+  <strong><%= t('note_created') %>:</strong>
   <%= note.created_at %>
 </p>
 <p>
-  <strong><%= 'updated_at' %>:</strong>
+  <strong><%= t('note_updated') %>:</strong>
   <%= note.updated_at %>
 </p>
 <p>
-  <strong><%= 'visibility' %>:</strong>
-  <%= note.visibility %>
+  <strong><%= t('note_visibility') %>:</strong>
+  <%= t(note.visibility) %>
 </p>
 <p>
-  <strong><%= 'milestone_id' %>:</strong>
+  <strong><%= t('milestone') %>:</strong>
   <%= note.milestone_id %>
 </p>
 
 <p>
-  <%= link_to 'Delete Note', [note.milestone, note],
+  <%= link_to t('note_delete'), [note.milestone, note],
               method: :delete,
-              data: { confirm:'Are you sure?'} %>
+              data: { confirm: t('sure?')} %>
 </p>
