--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -4,15 +4,15 @@
 <%= form_for @milestone do |m| %>
 <%= params[:controller] %><br>
   <p> 
-    <%= m.label 'Title:' %><br>
+    <%= m.label t('mil_title') %>:<br>
     <%= m.text_field :title %>
   </p>
 
   <p>
-    <%= m.label 'Due date:' %><br>
+    <%= m.label t('mil_due_date') %>:<br>
     <%= m.text_area :due_date %>
   </p>
-  <%= m.submit 'Save changes'%>
+  <%= m.submit t('save')%>
   </p>
 
 <% end %>
