--- a/app/views/google/adddriveview.html.erb
+++ b/app/views/google/adddriveview.html.erb
@@ -1,9 +1,17 @@
-<form action="adddrive">
-  <h2>Adjuntar Documento de Goole Drive:</h2>
-  <p>Hito numero:</p>
-  <input name='milestone_id' type='input' value=<%=@milestone_id%> readonly>
-  <p>Ingrese al url del documento:</p>
-  <input type='input' name='URL'>
+<div class="container">
+  <div class="row">
+    <div class="card-col col-xs-8 col-xs-offset-2">
 
-  <input type='submit' value='Adjuntar'>
-</form>
+      <form action='adddrive' class='main-form'>
+        <h2>Adjuntar Documento de Goole Drive:</h2>
+        <label for='URL' class='control-label'>Hito numero</label>
+        <input name='milestone_id' type='input' value=<%=@milestone_id%> readonly class='form-control'>
+        <label for='URL' class='control-label'>Ingrese al url del documento</label>
+        <input type='input' name='URL' class='form-control'>
+        
+        <input type='submit' value='Adjuntar' class='btn btn-default'>
+      </form>
+
+    </div>
+  </div>
+</div>
