ajustes finales alfred 69

--- a/app/views/google/adddriveview.html.erb
+++ b/app/views/google/adddriveview.html.erb
@@ -3,13 +3,12 @@
     <div class="card-col col-xs-8 col-xs-offset-2">
 
       <form action='adddrive' class='main-form'>
-        <h2>Adjuntar Documento de Goole Drive:</h2>
-        <label for='URL' class='control-label'>Hito numero</label>
-        <input name='milestone_id' type='input' value=<%=@milestone_id%> readonly class='form-control'>
-        <label for='URL' class='control-label'>Ingrese al url del documento</label>
+        <h2> <%=t(:attachgoogledrivedoc) %> </h2>
+        <input name='milestone_id' type='hidden' value=<%=@milestone_id%> readonly class='form-control'>
+        <label for='URL' class='control-label'> <%=t(:documenturl)%> </label>
         <input type='input' name='URL' class='form-control'>
         <br>
-        <input type='submit' value='Adjuntar' class='btn btn-default'>
+        <input type='submit' value=<%=t(:attach)%> class='btn btn-default'>
       </form>
 
     </div>
