--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -20,6 +20,16 @@
                   link_to t(:markdone), milestone_path(@milestone, :milestone  => {:status => :done}), :method => :put
                 end
             %></p>
+          <p>
+            <%=t(:attachmentsdocs)%>: <br>
+          <ul>
+            <%@milestone.resources.each do |r|%>
+                <li><%=link_to r.title, r.url, :target => "_blank"%></li>
+            <%end%>
+          </ul>
+          <%=link_to t(:adddoc), :controller => 'google', :action => 'adddriveview', :milestone_id => @milestone.id%>
+
+          </p>
             <div class="calendar white right"><%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %></div>
         </div>
         <div class="clearfix"></div>
