--- a/app/views/people/add_mentor_form.html.erb
+++ b/app/views/people/add_mentor_form.html.erb
@@ -1,20 +1,29 @@
-<% if @posible_mentors.empty? %>
-    <h1>No hay posibles mentores para agregar para <%= @mentee.name %></h1>
-    <button type="submit()">Volver</button>
-<% else %>
-    <h1>Agregando mentor a <%= @mentee.name %>:</h1>
-    <% I18n.locale = :es %>
-    <%= form_tag(controller: "people", action: "add_mentor", method: "get") do %>
-        <input type="hidden" name="mentee_id" value="<%= @mentee.id %>">
-        <div class="field">
-          <h2>Desde:</h2>
-          <br>
-          <%= date_field(:mentor, :since_date) %>
-        </div>
-        <div class="field">
-          <h2>Mentor:</h2>
-          <%= select_tag(:mentor_id, options_from_collection_for_select(@posible_mentors.all, :id, :name)) %>
-        </div>
-        <button type="submit()">Agregar Mentor</button>
+<% I18n.locale = :es %>
+
+<div class="container">
+  <div class="row">
+    <div class="card-col col-xs-4 col-xs-offset-4">
+    <% if @posible_mentors.empty? %>
+        <h1>No hay posibles mentores para agregar para <%= @mentee.name %></h1>
+        <button type="submit()">Volver</button>
+    <% else %>
+
+        <h1><span class="glyphicon glyphicon-user"></span><span class="glyphicon glyphicon-chevron-right"></span><span class="glyphicon glyphicon-user"></span> Agregando mentor a <%= @mentee.name %>:</h1>
+        <%= form_tag(controller: "people", action: "add_mentor", method: "get") do %>
+            <input type="hidden" name="mentee_id" value="<%= @mentee.id %>">
+            <div class="field">
+              <h2>Desde:</h2>
+              <br>
+              <%= date_field_tag(:start_date,:start_date,:required => true) %>
+            </div>
+            <div class="field">
+              <h2>Mentor:</h2>
+              <%= select_tag(:mentor_id, options_from_collection_for_select(@posible_mentors.all, :id, :name),:required => true) %>
+            </div>
+            <button type="submit()">Agregar Mentor</button>
+              <% end %>
     <% end %>
-<% end %>
+
+    </div>
+  </div>
+</div>
