--- a/app/assets/stylesheets/_general.scss.erb
+++ b/app/assets/stylesheets/_general.scss.erb
@@ -1,4 +1,8 @@
 
+.large-text {
+    font-size: 2rem;
+}
+
 .calendar {
     background-image: image-url('layouts/calendar-red.png');
     background-repeat: no-repeat;
@@ -54,5 +58,10 @@
     &.small {
         width: 25px;
         height: 25px;
+    }
+
+    &.static {
+        position: static;
+        display: block;
     }
 }
