--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -18,6 +18,8 @@
 //= require jquery.knob
 //= require bootstrap-datepicker
 //= require form-validator/jquery.form-validator.min
+//= require typeahead.bundle
+//= require datatables
 //= require_tree .
 
 
@@ -31,4 +33,11 @@ $(function() {
       lang: '<%= I18n.locale %>'
   });
   $.fn.datepicker.defaults.format = "dd/mm/yyyy";
+  $(".datatable").DataTable({
+      paging: false,
+
+      "language": {
+          "search" : ""
+      }
+  });
 });
