--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,21 +1,32 @@
-<%= 'Categories:' %>
-<table class="table">
-  <tr>
-    <td><h4><%= t('cat_name') %></h4></td>
-    <td><h4><%= t('cat_icon') %></h4></td>
-    <td><h4><%= t('cat_created') %></h4></td>
-    <td><h4><%= t('cat_updated') %></h4></td>
-  </tr>
-  <% @category.each do |c| %>
-    <tr>
-      <td><%= c.name %></td>
-      <td><%= c.icon %></td>
-      <td><%= c.created_at%></td>
-      <td><%= c.updated_at%></td>
-    </tr>
-  <%end%>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
 
-</table>
+      <div class="table-container">
+        <h1><%= t('categories') %></h1>
+        <table class="table">
+          <thead>
+          <tr>
+            <td></td>
+            <td><%= t('cat_name') %></td>
+            <td><%= t('cat_created') %></td>
+            <td><%= t('cat_updated') %></td>
+          </tr>
+          </thead>
+          <tbody>
+          <% @category.each do |c| %>
+              <tr>
+                <td><%= c.icon %></td>
+                <td><%= c.name %></td>
+                <td><%= c.created_at%></td>
+                <td><%= c.updated_at%></td>
+              </tr>
+          <%end%>
+          </tbody>
+        </table>
+      </div>
 
-<%= link_to t('people'), me_people_path %>
-<%= link_to t('Categories'), categories_path %>
+
+    </div>
+  </div>
+</div>
