--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -3,7 +3,7 @@
     <div class="card-col col-xs-4 col-xs-offset-4">
 
         <%= form_for :project, url:projects_path, html: { class:'main-form','data-toggle': 'validator'} do |f| %>
-          <h1>Crear Proyecto</h1>
+          <h1><%= t('project_create_head') %></h1>
 
           <div class="form-group">
               <%= f.label t('project_name'), class: "control-label" %>
