--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,7 +5,7 @@
     <th><%= t('project_name') %> </th>
     <th><%= t('project_client') %></th>
   </tr>
-  <% projects = Project.all %>
+  <% projects = Project.where(validity: 'true') %>
   <% projects.each do |p| %>
     <tr>
       <td>
@@ -21,7 +21,7 @@
         <%= link_to t('edit'), edit_project_path(p) %>
       </td>
       <td>
-        <!--<%= link_to t('delete'), p, method: :delete %>-->
+        <%= link_to t('delete'), p, method: :delete %>
       </td>
     </tr>
   <% end %>
