--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -3,7 +3,9 @@
 
 <%= form_for @milestone do |m| %>
 <%= params[:controller] %><br>
-  <p> 
+  <p>
+
+    <input type="hidden" name="milestone_id" value="<%= @milestone.id %>">
     <%= m.label 'Title:' %><br>
     <%= m.text_field :title %>
   </p>
@@ -13,10 +15,11 @@
     <%= m.text_area :due_date %>
   </p>
 
-    <div class="field">
-      <%= label_tag('Tags'), nil, class: 'small_label') %>
+    <div>
+      <%= label_tag('Tags', nil, class: 'small_label') %>
       <br>
-      <%= select_tag(:tags, options_from_collection_for_select(@tags.all, :id, :name), :multiple => true) %>
+      <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name, @tags.map { |t| t.id } ), :multiple => true) %>
+
     </div>
 
   <%= m.submit 'Save changes'%>
