--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -19,8 +19,10 @@
           <div class="row">
             <div class="form-group col-xs-6">
               <%= m.label t('mil_status'), class: "control-label" %>
-              <%= m.text_field :status, class: "form-control"%>
+              <%= m.text_field :status, class: "form-control", 'data-validation': "status" %>
+              <%= t('values')+': rejected, pending, done' %>
             </div>
+
 
 
             <div class="form-group col-xs-6">
@@ -39,7 +41,7 @@
           </div>
               <%= m.hidden_field(:created_at, :value=>Time.now) %>
               <%= m.hidden_field(:updated_at, :value=>Time.now) %>
-        <%= m.button t('mil_create'), options= :type => 'submit', class: "btn btn-default" %>
+        <%= m.button t('mil_create'), :type => 'submit', class: "btn btn-default" %>
 
      </div>
      <% end %>
