--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
+    <%= link_to t('milestones'), milestones_path %><br>
     <div class="card-col col-xs-7">
-
       <div id="milestone-info">
         <%= milestone_status(@milestone) %>
         <div class="left-pane">
@@ -33,30 +33,9 @@
             <div class="calendar white right"><%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %></div>
             <p>
               <% if @milestone.category!=nil %>
-                  <table>
-                    <tr><td>--<%= t('category') %>--</td></tr>
-                    <tr><td><%=t('cat_name')%>: <%= @milestone.category.name %></td></tr>
-                    <tr><td><%=t('cat_icon')%>: <%= @milestone.category.icon %></td></tr>
-                    <tr><td><%=t('cat_created')%>: <%= @milestone.category.created_at%></td></tr>
-                  </table>
+                <%= render @milestone.category %>
               <%else%>
-                <% count=0 %>
-                  <table>
-                    <tr><td><%= t('cat_add') %></td></tr>
-                    <%= form_tag ({:action => 'add_category', :controller => 'milestones', :milestone_id => @milestone.id}) do   %>
-                      <tr><td><select name="category_id">
-                        <% Category.all.each do |ca| %>
-                          <option value= <%=ca.id%> > <%=ca.name%></option>
-                          <% count=count+1 %>
-                        <% end %>
-                      </select></td></tr>
-                      <% if count>0 %>
-                        <tr><td><%= submit_tag(t('add')) %></td></tr>
-                      <% else %>
-                        <%=t('cat_unavailable')%>
-                      <% end %>
-                    <% end %>
-                  </table>
+                <%= render 'categories/form' %>
               <%end%>
             </p>
         </div>
@@ -66,6 +45,7 @@
 
           <h2><%= 'Add Notes' %></h2>
           <%= render 'notes/form' %>
+
         </div>
       </div>
 
