--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,3 +1,7 @@
+<% if (note.visibility=='me'&& note.author_id==current_user.id) || #si es personal, la hice yo?
+        note.visibility=='mentors' && Person.find(note.author_id).mentors.exists?(current_user.id) || #si es para mentores, soy su mentor
+        note.visibility=='every_body'%>
+
 <p>
   <strong><%= t('note') %>:</strong>
   <%= note.text %>
@@ -30,3 +34,5 @@
               method: :delete,
               data: { confirm: t('sure?')} %>
 </p>
+
+<% end%>
