--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container-fluid">
   <div class="row">
+    <%= link_to t('milestones'), milestones_path %>
     <div class="card-col col-xs-2">
       <%= render 'people/profile_card' %>
       <%= render 'people/stats_card' %>
