Alfred 70 con chosen

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -18,6 +18,7 @@
 //= require jquery.knob
 //= require bootstrap-datepicker
 //= require form-validator/jquery.form-validator.min
+//= require chosen/chosen.jquery.min
 //= require_tree .
 
 
