--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -4,6 +4,7 @@
 @import "jquery-ui/core";
 @import "jquery-ui/autocomplete";
 @import "bootstrap-datepicker.standalone";
+@import "chosen/chosen.min";
 
 $turqoise: #169F85;
 $peterriver: #2980B8;
