--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -1,11 +1,11 @@
+
+
 <% provide(:title, "Edit Milestone") %>
 <h1>Edit Milestone</h1>
 
 <%= form_for @milestone do |m| %>
 <%= params[:controller] %><br>
   <p>
-
-    <input type="hidden" name="milestone_id" value="<%= @milestone.id %>">
     <%= m.label 'Title:' %><br>
     <%= m.text_field :title %>
   </p>
@@ -18,7 +18,7 @@
     <div>
       <%= label_tag('Tags', nil, class: 'small_label') %>
       <br>
-      <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name, @tags.map { |t| t.id } ), :multiple => true) %>
+      <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name, @tags.map { |t| t.id } ), :multiple => true, class: "chzn-select") %>
 
     </div>
 
@@ -26,3 +26,6 @@
   </p>
 
 <% end %>
+
+
+<script> $(".chzn-select").chosen({placeholder_text_multiple: "Seleccione las tags del hito"});</script>
