--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -18,7 +18,7 @@
     <div>
       <%= label_tag('Tags', nil, class: 'small_label') %>
       <br>
-      <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name, @tags.map { |t| t.id } ), :multiple => true, class: "chzn-select") %>
+      <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name, @milestone.tags.map { |t| t.id } ), :multiple => true, class: "chzn-select") %>
 
     </div>
 
