--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -30,7 +30,14 @@
           <%=link_to t(:adddoc), :controller => 'google', :action => 'adddriveview', :milestone_id => @milestone.id%>
 
           </p>
-            <div class="calendar white right"><%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %></div>
+          <div class="calendar white right">
+            <% if @milestone.start_date %>
+            <%= l(@milestone.start_date, format: "%A, %B %d %Y").capitalize %><br>
+            <% end %>
+            <% if @milestone.due_date %>
+            <%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %>
+            <% end %>
+          </div>
             <p>
               <% if @milestone.category!=nil %>
                 <%= render @milestone.category %>
