--- a/app/views/people/_stats_card.erb
+++ b/app/views/people/_stats_card.erb
@@ -20,8 +20,8 @@
 
   <h1>Estadísticas</h1>
   <div class="badge-stats">
-    <span>Proyectos en curso</span><span class="badge"><%=@proysin%></span>
-    <span>Proyectos realizados</span><span class="badge"><%=@proysend%></span>
+    <span>Proyectos en curso</span><span class="badge"><%=@proysin%></span><br>
+    <span>Proyectos realizados</span><span class="badge"><%=@proysend%></span><br>
     <span>Tiempo en Moove-it</span><span class="badge"><%= time_ago_in_words(@start_date) %></span>
   </div>
 </div>
